Sat Mar  3 12:12:16 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_{parse,strptime}.c [ruby-dev:45303].

Sat Mar  3 10:09:21 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (initialize): net/http defaults to 1_2 in 1.8+,
	  so we can safely remove the call to enable it.

Sat Mar  3 08:42:25 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (new2): use URI for uri parsing.
	* test/xmlrpc/test_client.rb: test that query params are passed to the
	  client constructor.

Sat Mar  3 08:20:10 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (new2): raises an ArgumentError on bad
	  arguments.
	* test/xmlrpc/test_client.rb: tests for bad uris

Sat Mar  3 08:08:11 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (new2): fix custom port specification when an
	  SSL uri is used.
	* test/xmlrpc/test_client.rb: tests for XMLRPC::Client.new2

Sat Mar  3 08:03:29 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): use ISDIGIT().
	  [ruby-core:43060] [Bug #6108]

	* ext/syck/token.c (sycklex_yaml_utf8): cast as unsigned char.
	  [ruby-core:43060] [Bug #6108]

Sat Mar  3 06:57:14 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ruby_pc): make configurable.  [Bug #6051]

Fri Mar  2 17:49:03 2012  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* .travis.yml (branches): Enable TravisCI for ruby_1_9_3.

Fri Mar  2 17:13:33 2012  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/ruby/test_array.rb (test_combination2): Make the test case for
	  [ruby-core:29240] more descriptive.
	  cf. http://bugs.jruby.org/6518

Fri Mar  2 16:37:11 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): use wcscasecmp().

Fri Mar  2 16:36:31 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (native_cond_timeout): cast explicitly to suppress
	  a warning.
